--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,354 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* React CSS */
+
+.App {
+    text-align: center;
+}
+
+.App-logo {
+    height: 40vmin;
+    pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
+}
+
+.App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
+    text-align: center;
+}
+
+.App-link {
+    color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+/* my CSS */
+
+.unselectable {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.offcanvas-header.white-close .btn-close {
+    background: transparent
+        url("data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 16 16%27 fill=%27%23fff%27%3e%3cpath d=%27M.293.293a1 1 0 011.414 0L8 6.586 14.293.293a1 1 0 111.414 1.414L9.414 8l6.293 6.293a1 1 0 01-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 01-1.414-1.414L6.586 8 .293 1.707a1 1 0 010-1.414z%27/%3e%3c/svg%3e")
+        center/1em auto no-repeat;
+}
+
+@media (min-width: 680px) {
+    .navmedia {
+        visibility: visible;
+    }
+    .navbuttonmedia {
+        visibility: hidden;
+    }
+}
+
+@media (max-width: 680px) {
+    .navmedia {
+        visibility: hidden;
+    }
+    .navbuttonmedia {
+        visibility: visible;
+    }
+}
+
+/* 3D mouse tracking */
+
+#mainWrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: max-content;
+    width: 0;
+}
+
+#cardsWrapper {
+    display: flex;
+    justify-content: space-between;
+    width: max-content;
+}
+
+.card-mt {
+    width: 300px;
+    height: 60vh !important;
+    perspective: 500px;
+    position: relative;
+    background-color: #282c34 !important;
+}
+
+.image-mt {
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+
+.image-mt.first {
+    background: url("https://images.unsplash.com/photo-1592781959445-63e59ba0666d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80")
+        no-repeat center;
+}
+
+.image-mt.second {
+    background: url("https://images.unsplash.com/photo-1601352209555-489a72668fda?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=448&q=80")
+        no-repeat center;
+}
+
+.image-mt.third {
+    background: url("https://images.unsplash.com/photo-1576341592370-3151269da47e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=464&q=80")
+        no-repeat center;
+}
+
+.image-mt.fourth {
+    background: url("https://images.unsplash.com/photo-1617347454431-f49d7ff5c3b1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=815&q=80")
+        no-repeat center;
+}
+
+.image-mt.fifth {
+    background: url("https://images.unsplash.com/photo-1624305043556-57cf26fb5c56?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80")
+        no-repeat center;
+}
+
+.image-mt.sixth {
+    background: url("https://images.unsplash.com/photo-1527689368864-3a821dbccc34?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80")
+        no-repeat center;
+}
+
+.image-mt.seventh {
+    background: url("https://images.unsplash.com/photo-1621839673705-6617adf9e890?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80")
+        no-repeat center;
+}
+
+.screen-mt {
+    background-color: rgba(0, 0, 0, 0.22);
+    width: 100%;
+    height: 100%;
+    transform: translateZ(30px) scale(0.94);
+}
+
+/* animations */
+
+.text-flicker-in-glow {
+    animation: text-flicker-in-glow 20s linear infinite both;
+}
+@keyframes text-flicker-in-glow {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    10.1% {
+        opacity: 1;
+        text-shadow: none;
+    }
+    10.2% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    20% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    20.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.25);
+    }
+    20.6% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    30% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    30.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+            0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    30.5% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+            0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    30.6% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    45% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    45.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+            0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    50% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+            0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    55% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.45),
+            0 0 60px rgba(255, 255, 255, 0.25);
+    }
+    55.1% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    57% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    57.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55),
+            0 0 60px rgba(255, 255, 255, 0.35);
+    }
+    60% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55),
+            0 0 60px rgba(255, 255, 255, 0.35);
+    }
+    60.1% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    65% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    65.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55),
+            0 0 60px rgba(255, 255, 255, 0.35),
+            0 0 100px rgba(255, 255, 255, 0.1);
+    }
+    75% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55),
+            0 0 60px rgba(255, 255, 255, 0.35),
+            0 0 100px rgba(255, 255, 255, 0.1);
+    }
+    75.1% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    77% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    77.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55),
+            0 0 60px rgba(255, 255, 255, 0.4),
+            0 0 110px rgba(255, 255, 255, 0.2),
+            0 0 100px rgba(255, 255, 255, 0.1);
+    }
+    85% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.55),
+            0 0 60px rgba(255, 255, 255, 0.4),
+            0 0 110px rgba(255, 255, 255, 0.2),
+            0 0 100px rgba(255, 255, 255, 0.1);
+    }
+    85.1% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    86% {
+        opacity: 0;
+        text-shadow: none;
+    }
+    86.1% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.6),
+            0 0 60px rgba(255, 255, 255, 0.45),
+            0 0 110px rgba(255, 255, 255, 0.25),
+            0 0 100px rgba(255, 255, 255, 0.1);
+    }
+    100% {
+        opacity: 1;
+        text-shadow: 0 0 30px rgba(255, 255, 255, 0.6),
+            0 0 60px rgba(255, 255, 255, 0.45),
+            0 0 110px rgba(255, 255, 255, 0.25),
+            0 0 100px rgba(255, 255, 255, 0.1);
+    }
+}
+
+.slide-top {
+    animation: slide-top 0.75s ease-in-out infinite alternate;
+}
+@keyframes slide-top {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-20px);
+    }
+}
+
+.slide-bottom {
+    animation: slide-bottom 0.75s ease-in-out infinite alternate;
+}
+@keyframes slide-bottom {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(20px);
+    }
+}
+
+/* animation navbarMenu */
+
+.slide-start{-webkit-animation:slide-start 1.5s cubic-bezier(.25,.46,.45,.94) both;animation:slide-start 1.5s cubic-bezier(.25,.46,.45,.94) both}
+@-webkit-keyframes slide-start{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-start{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-greetings{-webkit-animation:slide-greetings 1.5s cubic-bezier(.25,.46,.45,.94) .25s both;animation:slide-greetings 1.5s cubic-bezier(.25,.46,.45,.94) .25s both}
+@-webkit-keyframes slide-greetings{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-greetings{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-services{-webkit-animation:slide-services 1.5s cubic-bezier(.25,.46,.45,.94) .5s both;animation:slide-services 1.5s cubic-bezier(.25,.46,.45,.94) .5s both}
+@-webkit-keyframes slide-services{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-services{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-projects{-webkit-animation:slide-projects 1.5s cubic-bezier(.25,.46,.45,.94) .75s both;animation:slide-projects 1.5s cubic-bezier(.25,.46,.45,.94) .75s both}
+@-webkit-keyframes slide-projects{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-projects{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-team{-webkit-animation:slide-team 1.5s cubic-bezier(.25,.46,.45,.94) 1s both;animation:slide-team 1.5s cubic-bezier(.25,.46,.45,.94) 1s both}
+@-webkit-keyframes slide-team{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-team{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-contacts{-webkit-animation:slide-contacts 1.5s cubic-bezier(.25,.46,.45,.94) 1.25s both;animation:slide-contacts 1.5s cubic-bezier(.25,.46,.45,.94) 1.25s both}
+@-webkit-keyframes slide-contacts{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-contacts{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-about{-webkit-animation:slide-about 1.5s cubic-bezier(.25,.46,.45,.94) 1.5s both;animation:slide-about 1.5s cubic-bezier(.25,.46,.45,.94) 1.5s both}
+@-webkit-keyframes slide-about{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-about{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-drafts{-webkit-animation:slide-drafts 1.5s cubic-bezier(.25,.46,.45,.94) 1.75s both;animation:slide-drafts 1.5s cubic-bezier(.25,.46,.45,.94) 1.75s both}
+@-webkit-keyframes slide-drafts{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-drafts{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+.slide-concepts{-webkit-animation:slide-concepts 1.5s cubic-bezier(.25,.46,.45,.94) 2s both;animation:slide-concepts 1.5s cubic-bezier(.25,.46,.45,.94) 2s both}
+@-webkit-keyframes slide-concepts{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}@keyframes slide-concepts{0%{-webkit-transform:translateY(1000px);transform:translateY(1000px);opacity:0}100%{-webkit-transform:translateY(0);transform:translateY(0);opacity:1}}
+
+.fade-in-rtrans{-webkit-animation:fade-in-rtrans .6s cubic-bezier(.39,.575,.565,1.000) both;animation:fade-in-rtrans .6s cubic-bezier(.39,.575,.565,1.000) both}
+@-webkit-keyframes fade-in-rtrans{0%{-webkit-transform:translateX(50px);transform:translateX(50px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}@keyframes fade-in-rtrans{0%{-webkit-transform:translateX(50px);transform:translateX(50px);opacity:0}100%{-webkit-transform:translateX(0);transform:translateX(0);opacity:1}}
