--- a/styles/globals.css
+++ b/styles/globals.css
@@ -97,10 +97,55 @@
 
 .card-mt {
     width: 300px;
-    height: 60vh !important;
+    height: calc(60vh) !important;
     perspective: 500px;
     position: relative;
     background-color: #282c34 !important;
+}
+
+/* .card-cont-scroll {
+    -ms-overflow-style: none;  /* Internet Explorer 10+ /
+    scrollbar-width: none;  /* Firefox /
+}
+
+.card-cont-scroll::-webkit-scrollbar { 
+    display: none;  /* Safari and Chrome /
+} */
+
+.card-cont-scroll::-webkit-scrollbar { 
+    width: 2px;
+    margin-right: 8px;
+}
+
+/* .card-cont-scroll::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 0px; 
+} */
+
+.card-cont-scroll::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, .35);
+}
+
+.card-cont-scroll::-webkit-scrollbar-thumb:hover {
+    background: green; 
+}
+
+/* .cont-scroll:hover .adown { 
+    visibility: visible !important;
+} */
+
+.card-mt:hover .photografer {
+    animation: swing-in-top-bck .6s cubic-bezier(.175,.885,.32,1.275)/* , rotate-in-2-tr-ccw .5s cubic-bezier(.25,.46,.45,.94) */ both;
+    visibility: visible !important;
+}
+
+/* @keyframes rotate-in-2-tr-ccw{0%{transform:rotate(0deg);transform-origin:100% 0;opacity:0}100%{transform:rotate(-90deg);transform-origin:100% 0;opacity:1}} */
+
+@keyframes swing-in-top-bck{0%{transform:rotateX(70deg);transform-origin:top;opacity:0}100%{transform:rotateX(0deg);transform-origin:top;opacity:1}}
+
+.card2:hover + .photografer2 {
+    display: block;
+    background-color: yellow;
 }
 
 .image-mt {
