fix problems, ready to put more examples, context

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,14 @@
 
 /* React CSS */
 
+.invisibleScroll {
+    scrollbar-width: none;
+}
+
+.invisibleScroll::-webkit-scrollbar {
+    display: none;
+}
+
 .App {
     text-align: center;
 }
