--- a/styles/globals.css
+++ b/styles/globals.css
@@ -265,8 +265,10 @@
 }
 
 .image-mt.seventh {
-    background: url("https://images.unsplash.com/photo-1621839673705-6617adf9e890?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80")
-        no-repeat center;
+    /* background: url("https://images.unsplash.com/photo-1621839673705-6617adf9e890?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1032&q=80")
+        no-repeat center; */
+    background: url("https://images.unsplash.com/photo-1544474560-5b2a788d024a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80")
+        no-repeat;
     background-size: cover;
 }
 
